# linux-over-the-air

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  cleanup-branches.yml  create-readmes.yml  mirror-orgs-watchdog.yml  mirror-osp-to-gitlab.yml  mirror-osp-to-ooc.yaml  notify-poller.yml  release.yml  resolve-failures.yml  sync-to-gitlab-variant.yml  translate-readmes.yml  update-infra-deps.yml  upstream-commits.yml
client/cli/: go.mod
client/cli/cmd/lota/: android.go  channel.go  dlc.go  main.go  rollback.go  status.go  update.go
client/hooks/: hook-runner.sh
config/: channels.toml  system.toml
engine/: Cargo.toml
engine/crates/android-slot-manager/: Cargo.toml
engine/crates/android-slot-manager/src/: lib.rs
engine/crates/delta-apply/: Cargo.toml
engine/crates/delta-apply/src/: lib.rs
engine/crates/fwupd-client/: Cargo.toml
engine/crates/fwupd-client/src/: lib.rs
engine/crates/omaha-client/: Cargo.toml
engine/crates/omaha-client/src/: lib.rs
engine/crates/payload-bin/: Cargo.toml  build.rs
engine/crates/payload-bin/proto/: update_metadata.proto
engine/crates/payload-bin/src/: lib.rs
engine/crates/slot-manager/: Cargo.toml
engine/crates/slot-manager/src/: lib.rs
engine/crates/update-engine/: Cargo.toml
engine/crates/update-engine/src/: config.rs  engine.rs  hooks.rs  lib.rs  payload.rs  verify.rs
packaging/bundle/: android-bundle.sh  bundle.sh
runtime/android/: adb-sideload.sh  avb-sign.sh  bootctl-wrapper.sh  fastboot-flash.sh  halium-ota.sh  payload-tool.sh  waydroid-ota.sh
runtime/boot/: confirm-boot.sh
runtime/firmware/: fwupd-coordinator.sh
runtime/fs/: install-handler.sh
runtime/incus/: incus-ota.sh
scripts/: patch-origins-sections.sh  reconcile-org-refs.sh
server/hawkbit/: __init__.py  server.py
server/nebraska/: nebraska.py
server/omaha/: __init__.py  android.py
