[workspace]
resolver = "2"
members = [
    "crates/update-engine",
    "crates/slot-manager",
    "crates/delta-apply",
    "crates/omaha-client",
    "crates/fwupd-client",
    "crates/android-slot-manager",
    "crates/payload-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["linux-over-the-air contributors"]
repository = "https://github.com/Interested-Deving-1896/linux-over-the-air"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Error handling
anyhow = "1"
thiserror = "1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# XML (Omaha protocol)
quick-xml = { version = "0.36", features = ["serialize"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# D-Bus (fwupd, update_engine interface)
zbus = { version = "4", features = ["tokio"] }
# Crypto / verification
sha2 = "0.10"
hex = "0.4"
# Delta patching
bsdiff = "0.2"
# Protobuf (payload.bin DeltaArchiveManifest)
prost = "0.13"
# Async trait support
async-trait = "0.1"
