[package]
name = "android-slot-manager"
description = "Android A/B slot management via bootctl HAL and BCB"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true

slot-manager = { path = "../slot-manager" }
