[package]
name = "fwupd-client"
description = "D-Bus client for fwupd firmware update coordination"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
zbus.workspace = true
