[package]
name = "payload-bin"
description = "Android payload.bin (CrAU format) reader and writer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true

# Protobuf for DeltaArchiveManifest
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
